# rtx-30-finder

./: .gitignore  README.md  setup.cfg
src/rtx30finder/: main.py
src/rtx30finder.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
