[metadata]
name = rtx30finder
version = 0.0.4
author = Patrick Keogh
author_email = pfkeogh@live.com
description = rtx 30 series finder
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pfkeogh/rtx-30-finder
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    requests == 2.25.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    rtx30finder = rtx30finder.main:commandline_handler